<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
     tools:context=".Activity.LoginActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="25dp"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/icons" />


        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/LoginText"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/PasswordText"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:onClick="Login"
            android:layout_gravity="center_horizontal"
            android:text="@string/LogInText"
            android:textColor="@color/icons"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegisterText"
            android:id="@+id/RegisterButton"
            android:onClick="Register"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/icons"
            android:layout_marginTop="25dp" />

    </LinearLayout>
</RelativeLayout>
