<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".Adapter.AddCommentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/linearLayout2">


        <ImageView
            android:id="@+id/ContentImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/ContentName"
            android:textColor="@color/icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:text="ContentName"
            android:textSize="@dimen/text_size_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourCommentText" />

        <EditText
            android:id="@+id/CommentContent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/yourNoteText" />

        <Button
            android:id="@+id/noteButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:onClick="selectyournoteClick"
            android:orientation="horizontal"
            android:text="@string/selectyournoteText"
            android:textColor="@color/icons">


        </Button>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:backgroundTint="#f93030"
            android:onClick="CancelClick"
            android:text="@string/CancelText"
            android:textColor="@color/icons" />

        <Button
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="SendClick"
            android:text="@string/SendText"
            android:textColor="@color/icons"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>

